@@ -62,6 +62,9 @@ struct _GstQueue {
   GstPad *sinkpad;
   GstPad *srcpad;
 
+  /* flowreturn when srcpad is paused */
+  GstFlowReturn srcresult;
+
   /* the queue of data we're keeping our grubby hands on */
   GQueue *queue;
 
@@ -79,7 +82,6 @@ struct _GstQueue {
 
   /* it the queue should fail on possible deadlocks */
   gboolean may_deadlock;
-  gboolean flushing;
 
   GMutex *qlock;	/* lock for queue (vs object lock) */
   GCond *item_add;	/* signals buffers now available for reading */
